@@ -15,6 +15,8 @@ in the source distribution for its full text.
 
 #define COPYRIGHT "(C) 2004-2011 Hisham Muhammad"
 
+typedef bool(*ForeachProcessFn)(Process*, size_t);
+
 typedef struct IncBuffer_;
 
 int main(int argc, char** argv);
